--- a/index.html
+++ b/index.html
@@ -5,22 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
+
         <section id="login">
 
             <div id="imagem">
-                <img src="imagens/bulding.jpg" alt="entrada-predio">
+                
             </div>
 
-            <div id="formulário">
+            <div id="formulario">
 
                 <h1>Login</h1>
-                <p>Seja bem vindo novamente. Faça login para acessar sua conta e poder fazer as configuraçoes no seu ambiente.</p>
+                <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configuraçoes no seu ambiente.</p>
                 <form action="login.php" method="post">
-                    
+
+                    <fieldset id="email-login">
+
+                        <label for="iemail"><span id="name-icon" class="material-icons">person</span></label>
+                        <input type="email" name="email" id="iemail" placeholder="seu email" required>
+
+                    </fieldset>
+
+                    <fieldset id="password-login">
+
+                        <label for="ipassword"><span id="password-icon" class="material-icons">key</span></label>
+                        <input type="password" name="password" id="ipassword" placeholder="sua senha" required>
+
+                    </fieldset>
+
+                    <fieldset id="entrar">
+
+                        <input type="submit" value="Entrar">
+
+                    </fieldset>
+
+                    <fieldset id="esqsenha">
+
+                        <a href="#">esqueci a senha<span id="esq-senha" class="material-icons">email</span></a>
+
+                    </fieldset>
+
                 </form>
 
             </div>
