--- a/index.html
+++ b/index.html
@@ -25,31 +25,33 @@
                 <p>Seja bem vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configuraçoes no seu ambiente.</p>
                 <form action="login.php" method="post">
 
-                    <fieldset id="email-login">
+                    <div class="campo">
 
-                        <label for="iemail"><span id="name-icon" class="material-icons">person</span></label>
-                        <input type="email" name="email" id="iemail" placeholder="seu email" required>
+                        <span id="name-icon" class="material-icons">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="seu email" required>
+                        <label for="ilogin">login</label>
 
-                    </fieldset>
+                    </div>
 
-                    <fieldset id="password-login">
+                    <div class="campo">
 
-                        <label for="ipassword"><span id="password-icon" class="material-icons">key</span></label>
-                        <input type="password" name="password" id="ipassword" placeholder="sua senha" required>
+                        <span id="password-icon" class="material-icons">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" required>
+                        <label for="isenha">senha</label>
 
-                    </fieldset>
+                    </div>
 
-                    <fieldset id="entrar">
+                    <div id="entrar">
 
                         <input type="submit" value="Entrar">
 
-                    </fieldset>
+                    </div>
 
-                    <fieldset id="esqsenha">
+                    <div id="esqsenha">
 
                         <a href="#">esqueci a senha<span id="esq-senha" class="material-icons">email</span></a>
 
-                    </fieldset>
+                    </div>
 
                 </form>
 
