--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                         <span class="material-icons">person</span>
                         <input type="email" name="login" id="ilogin" placeholder="seu email" autocomplete="email" max-length="30" required>
-                        <label for="ilogin"></label>
+                        <label for="ilogin">Login</label>
 
                     </div>
 
@@ -37,13 +37,13 @@
 
                         <span class="material-icons">vpn_key</span>
                         <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" min-lenght="8" max-length="20" required>
-                        <label for="isenha"></label>
+                        <label for="isenha">Senha</label>
 
                     </div>
                     
                     <input type="submit" value="Entrar">
 
-                    <a href="esqueci.html">
+                    <a class="botao" href="esqueci.html">
                         esqueci a senha <span class="material-icons">mail</span>
                     </a>
 
